[package]
name = "filename-cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Matthew"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
walkdir = "2.5.0"
indicatif = "0.17.8"
log = "0.4.22"
simple_logger = "5.0.0"
clap = { version = "4.4", features = ["derive"] }
