[package]
name = "pdf-splitter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdf-split"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
clap = { version = "4.5", features = ["derive"] }
lopdf = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
