[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
proto = { path = "../proto" }

tokio = { version = "1.39", features = ["full"] }
tonic = "0.12"
prost = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono"] }
deadpool-redis = "0.18"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
anyhow = "1.0"
