[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
proto = { path = "../proto" }

tokio = { version = "1.39", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.7"
tonic = "0.12"
prost = "0.13"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.1"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
