[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.39", features = ["full"] }
# 数据库 - MySQL
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono", "json"] }
# 数据库 - Redis
deadpool-redis = "0.18"
# 错误处理
thiserror = "1.0"
anyhow = "1.0"
# 配置管理
config = "0.14"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 时间处理
chrono = "0.4"
# 字节处理
bytes = "1.7"
# Protobuf (可能在 shared 中处理一些通用逻辑)
prost = "0.13"
proto = { path = "../proto" }
etcd-client = "0.14"
